Spruced up the 3d carousel. Made the item boxes actual 3d boxes and cleaned up the styling. Also fixed a number of layout bugs related to 3d clipping problems.

--- a/workspaces/frontend/components/about/about.module.scss
+++ b/workspaces/frontend/components/about/about.module.scss
@@ -162,7 +162,7 @@ $normalBorder: 2px solid lightsteelblue;
   }
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1024px) {
   .experiencesGridContainer {
     grid-template-columns: 25px auto;
     grid-template-rows: auto;
