--- a/workspaces/frontend/components/layout/layout.module.scss
+++ b/workspaces/frontend/components/layout/layout.module.scss
@@ -61,10 +61,12 @@
     transform: translateY(0px);
   }
 }
+.navMenu.isOpen + .body {
+  z-index: -1;
+}
 
 .body {
   grid-area: body;
-  z-index: 1;
   outline: 2px solid lightsteelblue;
   width: 100%;
   height: 100%;
