--- a/workspaces/frontend/components/projects/projects.module.scss
+++ b/workspaces/frontend/components/projects/projects.module.scss
@@ -1,7 +1,6 @@
 $numItems: 8;
-$itemDim: 25vw;
+$itemDim: 24vw;
 $PI: 3.1415926535;
-$translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
 
 .carouselContainer {
   height: inherit;
@@ -11,7 +10,7 @@ $translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
     "leftArrow carousel rightArrow"
     ". downArrow .";
   grid-template-columns: 5em auto 5em;
-  grid-template-rows: 5em auto 5em;
+  grid-template-rows: 0em auto 0em;
 
   .leftArrow {
     grid-area: leftArrow;
@@ -47,6 +46,7 @@ $translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
     align-self: center;
     filter: drop-shadow(2px 4px 4px black);
     cursor: pointer;
+    z-index: 99;
   }
   .leftArrow:hover,
   .rightArrow:hover,
@@ -62,20 +62,90 @@ $translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
     display: grid;
     grid-template-areas: "item";
     perspective: 100vw;
+    transform-style: preserve-3d;
+    transition: transform 0.75s;
     .item {
       grid-area: item;
       align-self: center;
       justify-self: center;
       height: $itemDim;
       width: $itemDim;
-      background-color: rgba(0, 0, 0, 0.1);
-      border: 0.1em solid black;
-      border-radius: 0.5em;
+      background: #55759e;
+      border: 0.05em solid lightsteelblue;
+      color: white;
       transition: transform 0.75s;
-      div {
+      transform-style: preserve-3d;
+      perspective: 100vw;
+      .itemCard {
         width: 100%;
         height: 100%;
+        display: grid;
+        grid-template:
+          "title title title" 40%
+          ". . ." 10%
+          "preview preview preview" 40%
+          "preview preview preview" 10% / 10% 80% 10%;
+        transform: translateZ(0.01em);
+        transition: transform 0.75s;
+
+        .itemCardTitle {
+          grid-area: title;
+          display: flex;
+          justify-self: center;
+          align-items: center;
+        }
+        .itemCardPreview {
+          grid-area: preview;
+          background: white;
+          > canvas {
+            opacity: 1 !important;
+          }
+        }
       }
+    }
+    .item:hover {
+      opacity: 0.5;
+    }
+    // Back of the box
+    .item::before {
+      content: "";
+      position: absolute;
+      top: -0.05em;
+      bottom: -0.05em;
+      right: -0.05em;
+      left: -0.05em;
+      background: linear-gradient(#55759e 50%, white 50%);
+      border: 0.05em solid lightsteelblue;
+      transform: translateZ(-0.4em);
+      box-shadow: 0px 0px 6px black;
+      transition: transform 0.75s;
+    }
+    // Left side of box
+    .itemBoxSides {
+      position: absolute;
+      width: 0.45em;
+      top: -0.05em;
+      bottom: -0.05em;
+      left: -0.05em;
+      background: linear-gradient(#55759e 50%, white 50%);
+      border: 0.05em solid lightsteelblue;
+      transform: rotateY(90deg);
+      transform-origin: left center;
+      transform-style: preserve-3d;
+      transition: transform 0.75s;
+    }
+    // Right side of box
+    .itemBoxSides::before {
+      content: "";
+      position: absolute;
+      top: -0.05em;
+      bottom: -0.05em;
+      right: -0.05em;
+      left: -0.05em;
+      background: linear-gradient(#55759e 50%, white 50%);
+      border: 0.05em solid lightsteelblue;
+      transform: translateZ(calc(#{$itemDim} - 0.05em));
+      transition: transform 0.75s;
     }
   }
 }
@@ -90,10 +160,20 @@ $translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
     visibility: visible !important;
   }
   .carouselContainer {
+    grid-template-columns: 0em auto 0em;
+    grid-template-rows: 5em auto 5em;
     .items {
       transform: rotateZ(-90deg) scale(1.25);
-      .item > div {
-        transform: rotateZ(90deg);
+      .item {
+        .itemBoxSides {
+          background: white !important;
+        }
+        .itemBoxSides::before {
+          background: #55759e !important;
+        }
+        .itemCard {
+          transform: rotateZ(90deg) translateZ(0.01em);
+        }
       }
     }
   }
@@ -108,11 +188,27 @@ $translateZ: calc((#{$numItems} * #{$itemDim}) / (2 * #{$PI}));
     visibility: visible !important;
   }
   .carouselContainer {
+    grid-template-columns: 0em auto 0em;
+    grid-template-rows: 5em auto 5em;
     .items {
-      transform: rotateZ(-90deg) scale(1.4);
-      .item > div {
-        transform: rotateZ(90deg);
+      transform: rotateZ(-90deg) scale(1.3);
+      .item {
+        .itemBoxSides {
+          background: white !important;
+        }
+        .itemBoxSides::before {
+          background: #55759e !important;
+        }
+        .itemCard {
+          transform: rotateZ(90deg) translateZ(0.01em);
+        }
       }
     }
+  }
+}
+
+@media only screen and (max-height: 500px) and (orientation: "landscape") {
+  .items {
+    transform: scale(0.8);
   }
 }
